# AI-interior-design

./: .env.cranl  .env.example  .gitignore  AI Home Styling Platform - MVP PRD.docx  AI Home Styling Platform - MVP Roadmap (KSA).docx  AI Home Styling Platform - MVP Roadmap.docx  AI Home Styling Platform - Master Plan.docx  AI Home Styling Platform - POC PRD.docx  Makefile  README.md  cranl_deploy.sh  nixpacks.toml  start_backend.sh  start_frontend.sh
ai/: pyproject.toml
ai/ai_pipeline/: hotspot_mapper.py  room_validator.py  style_renderer.py
ai/ai_pipeline/prompts/: minimal.py  modern.py
api/: pyproject.toml  railpack.json
api/app/: config.py  database.py  main.py
api/app/ai_pipeline/: hotspot_mapper.py  room_validator.py  style_renderer.py
api/app/models/: schemas.py
api/app/routers/: analytics.py  generate.py  products.py  styles.py  upload.py
api/app/services/: storage.py
api/app/workers/: main.py
data/: pyproject.toml
data/scripts/: check_db.py  dedupe_products.py  fetch_ikea_images.py  fix_products.py  scrape_catalogs.py  seed_db.py  test_alrugaib_c4ai.py  test_crawl.py
data/seed/: bundles.json  products.json
frontend/: package.json  pnpm-lock.yaml  railpack.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: HotspotOverlay.tsx  ImageUploader.tsx  ProductCard.tsx  RenderProgress.tsx  StyleCard.tsx
frontend/src/lib/: api.ts  store.ts
frontend/src/types/: index.ts
infra/: cors.json  docker-compose.yml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260302_init.sql
(+5 files in other folders)
