[project]
name = "ai-pipeline"
version = "0.1.0"
description = "AI Home Styling Platform - AI Pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "google-cloud-vision>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
